TAG: homologyload-6-0-5-2
DATE: 09/01/2016
STAFF: sc
1) Merge TR12044 branch to trunk

TAG: homology-no tag
DATE: 09/01/2016
STAFF: lec
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key in (1,3) changed to = 1

TAG: homologyload-TR12044-2
DATE: 07/06/2016
STAFF: sc
preprocessHGNC.py -  fixed bug where no singletons were being loaded

TAG: homologyload-TR12044-1
DATE: 07/01/2016
STAFF: sc
1) preprocessHGNC.py - 
* added parseFile method - create data structure because now one line per MGI ID 
* updated process method to iterate thru data structure rather than file
* added temp debug to qc report

TAG: homologyload-tr12044-BP
DATE: 07/01/2016
STAFF: sc
1) Branch Point tag TR12044 - New HGNC Biomart

TAG: homologyload-6-0-4-1
DATE: 04/28/2016
STAFF: kstone
1) Disabling Sybase translators

TAG: homologyload-6-0-3-1
DATE: 04/13/2016
STAFF: dbm
CHANGES: TR12322
1) zfinload.config.default: Input file name changed (xpat.txt -> xpat_fish.txt)

TAG: homologyload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) common.config.default: Clean up log mailing
2) homologeneload.config.default: Clean up log mailing
3) homologyload.config.default: Clean up log mailing

TAG: homologyload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: homologyload-trunk-1
DATE: 07/16/2015
STAFF: sc
CHANGES:
1) rm db.setAutoTranslate() and db.setAutoTranslateBE() from all python scripts
2) # --> temp:
    homologeneload.py
    homologyload.py
    preprocessHomologene.py
    
TAG: homologyload-tr11750-MP
DATE: 07/01/2015
STAFF: lec
CHANGES: merge  point tag for TR11750 Infrastructure II

TAG: homologyload-tr11750-1
DATE: 04/28/2015
STAFF: sc
CHANGES: copied *.postgres to *, rm *.postgres
specifically:
cp homologeneload.py.postgres homologeneload.py
cp homologyload.py.postgres homologyload.py
cp homologyload.sh.postgres homologyload.sh
cp preprocessHomologene.py.postgres preprocessHomologene.py