@@ -1,3 +1,9 @@
+TAG: homologyload-6-0-5-3
+DATE: 09/15/2016
+STAFF: sc
+CHANGES: TR12421
+1) clusterize.py - fixed clustering bug
+
 TAG: homologyload-6-0-5-2
 DATE: 09/01/2016
 STAFF: sc
